RESOLVED FIXED125348
[ATK] accessibility/document-attributes.html is failing
https://bugs.webkit.org/show_bug.cgi?id=125348
Summary [ATK] accessibility/document-attributes.html is failing
Lukasz Gajowy
Reported 2013-12-06 08:44:06 PST
Layout test accessibility/document-attributes.html is failing after r160220 http://trac.webkit.org/log/?verbose=on&rev=160220&stop_rev=160220 test output: --- /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/layout-test-results/accessibility/document-attributes-expected.txt +++ /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/layout-test-results/accessibility/document-attributes-actual.txt @@ -1 +1,3 @@ -Passed +Failed: +Expected: UTF-8 and file:///mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/LayoutTests/accessibility/document-attributes.html. +Actual: and . http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=accessibility%2Fdocument-attributes.html
Attachments
Patch (4.57 KB, patch)
2016-04-29 09:20 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2013-12-20 11:36:05 PST
Joanmarie Diggs
Comment 2 2016-04-29 09:20:38 PDT
Joanmarie Diggs
Comment 3 2016-05-03 08:44:12 PDT
Chris: This is a trivial patch. r?
WebKit Commit Bot
Comment 4 2016-05-03 18:04:28 PDT
Comment on attachment 277705 [details] Patch Clearing flags on attachment: 277705 Committed r200397: <http://trac.webkit.org/changeset/200397>
WebKit Commit Bot
Comment 5 2016-05-03 18:04:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.