[ATK] accessibility/document-attributes.html is failing https://bugs.webkit.org/show_bug.cgi?id=125348

Reviewed by Chris Fleizach.

Tools:

The test was failing because the WebArea is now being exposed with the role of
ATK_ROLE_DOCUMENT_WEB; not ATK_ROLE_DOCUMENT_FRAME. Unfortunately, when that
change was made, documentEncoding() and documentURI() were not updated accordingly.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::documentEncoding):
(WTR::AccessibilityUIElement::documentURI):

LayoutTests:

* platform/efl/TestExpectations: Unskipped failing test.
* platform/gtk/TestExpectations: Unskipped failing test.


Canonical link: https://commits.webkit.org/175430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200397 268f45cc-cd09-0410-ab3c-d52691b4dbfc